--- a/Libiada.Database/Libiada.Database.csproj
+++ b/Libiada.Database/Libiada.Database.csproj
@@ -45,12 +45,13 @@
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="EntityFramework6.Npgsql" Version="6.4.3" />
     <PackageReference Include="NetBio.Core" Version="3.0.0-alpha" />
-    <PackageReference Include="Npgsql" Version="7.0.0" />
-    <PackageReference Include="Npgsql.Json.NET" Version="7.0.0" />
+    <PackageReference Include="Npgsql" Version="7.0.1" />
+    <PackageReference Include="Npgsql.Json.NET" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\libiada-core\LibiadaCore\LibiadaCore.csproj" />
+    <ProjectReference Include="..\..\libiada-core\SequenceGenerator\SequenceGenerator.csproj" />
   </ItemGroup>
 
   <ItemGroup>
