Refactor Libiada.Database to use more DI

--- a/Libiada.Database/Libiada.Database.csproj
+++ b/Libiada.Database/Libiada.Database.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="EntityFramework6.Npgsql" Version="6.4.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="NetBio.Core" Version="3.0.0-alpha" />
     <PackageReference Include="Npgsql" Version="7.0.1" />
     <PackageReference Include="Npgsql.Json.NET" Version="7.0.1" />
