--- a/Libiada.Database.Tests/Libiada.Database.Tests.csproj
+++ b/Libiada.Database.Tests/Libiada.Database.Tests.csproj
@@ -32,4 +32,13 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\nuccore_result.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\nuccore_result2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
